@@ -1,6 +1,11 @@
 2015-10-19  Jason Merrill  <jason@redhat.com>
 
 	* c-cppbuiltin.c (c_cpp_builtins): Define
+	__cpp_nontype_template_args.
+
+2015-10-19  Jason Merrill  <jason@redhat.com>
+
+	* c-cppbuiltin.c (c_cpp_builtins): Define
 	__cpp_enumerator_attributes, __cpp_fold_expressions,
 	__cpp_unicode_characters.
 
